[INI] di data-integration-doc-php

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "php": ">=7.2",
         "magento/module-indexer": "*",
-        "magento/framework": "*"
+        "magento/framework": "*",
+        "boxalino/data-integration-doc-php":"~3.0.7"
     },
     "autoload": {
         "files": ["registration.php"],
